# spl-token-cli

./: Cargo.toml
src/: main.rs  utils.rs
src/commands/: create.rs  mint.rs  mod.rs  transfer.rs
